--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Info Kajian Islam</title>
+    <base href="./">
     <link rel="icon" href="assets/templates/img/icons/books.ico">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <link type="text/css" rel="stylesheet" href="assets/templates/assets/css/bootstrap.min.css">
@@ -13,6 +14,7 @@
     <link type="text/css" rel="stylesheet" href="assets/templates/css/animate.css">
   </head>
   <body>
+    
     <app-root></app-root>
 
     <!-- JS plugins -->
