--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Info Kajian Islam</title>
-    <base href="./">
+    <base href="/">
     <link rel="icon" href="assets/templates/img/icons/books.ico">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <link type="text/css" rel="stylesheet" href="assets/templates/assets/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="assets/templates/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link type="text/css" rel="stylesheet" href="assets/templates/assets/css/ready.css">
-    <link type="text/css" rel="stylesheet" href="assets/templates/assets/css/demo.css">
-    <link type="text/css" rel="stylesheet" href="assets/templates/assets/css/style.css">
-    <link type="text/css" rel="stylesheet" href="assets/templates/css/animate.css">
+    <link type="text/css" rel="stylesheet" href="assets/templates/css/ready.css">
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/demo.css"> -->
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/style.css"> -->
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/animate.css"> -->
+    <link type="text/css" rel="stylesheet" href="assets/templates/css/main.css">
+    <link type="text/css" rel="stylesheet" href="assets/templates/css/util.css">
   </head>
   <body>
     
