--- a/src/index.html
+++ b/src/index.html
@@ -6,37 +6,21 @@
     <base href="/">
     <link rel="icon" href="assets/templates/img/icons/books.ico">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <link type="text/css" rel="stylesheet" href="assets/templates/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link type="text/css" rel="stylesheet" href="assets/templates/css/ready.css">
-    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/demo.css"> -->
-    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/style.css"> -->
-    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/css/animate.css"> -->
-    <link type="text/css" rel="stylesheet" href="assets/templates/css/main.css">
-    <link type="text/css" rel="stylesheet" href="assets/templates/css/util.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/component/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/component/css/carousel.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
   </head>
   <body>
     
     <app-root></app-root>
 
     <!-- JS plugins -->
-    <script type="text/javascript" src="assets/templates/js/jquery/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/core/jquery.3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="assets/templates/js/popper.min.js"></script>
-    <script type="text/javascript" src="assets/templates/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/core/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/chartist/chartist.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/jquery-mapael/maps/world_countries.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/chart-circle/circles.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/ready.min.js"></script>
-    <script type="text/javascript" src="assets/templates/assets/js/demo.js"></script>
-    <script type="text/javascript" src="assets/templates/js/plugins.js"></script>
-    <script type="text/javascript" src="assets/templates/js/active.js"></script>
+    <script type="text/javascript" src="assets/component/js/script.js"></script>
   </body>
 </html>
