--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/component/css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/component/css/carousel.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/templates/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/templates/css/util.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+
   </head>
   <body>
     
