--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Info Kajian Islam</title>
+    <title>SIJAKI | Sistem Informasi Jadwal Kajian Islam</title>
     <base href="/">
     <link rel="icon" href="assets/templates/img/icons/books.ico">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
